...
    <string name="clear_playback_history_msg">This will clear the entire playback history. Are you sure you want to proceed?</string>
    <string name="remove_history_label">Remove from history</string>
    <string name="removed_history_label">Removed from history</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="reset">Reset</string>
    <string name="global_default">Global default</string>
...
    <string name="description_label">Description</string>
    <string name="shownotes_label">Shownotes</string>
    <string name="shownotes_contentdescription">swipe up to read shownotes</string>
    <string name="close_label">Close</string>
    <string name="retry_label">Retry</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="feed_volume_adapdation">Volume adaptation</string>
    <string name="feed_volume_adaptation_summary">Turn volume for episodes of this podcast up or down: %1$s</string>
    <string name="feed_volume_reduction_off">No adaption</string>
    <string name="feed_volume_reduction_light">Light reduction</string>
    <string name="feed_volume_reduction_heavy">Heavy reduction</string>
    <string name="feed_volume_boost_light">Light boost</string>
    <string name="feed_volume_boost_medium">Medium boost</string>
...
    <string name="button_action_fast_forward">Fast-forward</string>
    <string name="button_action_rewind">Rewind</string>
    <string name="button_action_skip_episode">Skip episode</string>
    <string name="button_action_restart_episode">Restart episode</string>
    <string name="pref_followQueue_sum">Jump to next queue item when playback completes</string>
    <string name="pref_auto_delete_playback_sum">Delete episode when playback completes</string>
    <string name="pref_auto_delete_playback_title">Delete after playing</string>
    <string name="pref_auto_delete_title">Automatic deletion</string>
    <string name="pref_auto_delete_sum">Delete episodes after playing or when automatic download needs space</string>
    <string name="pref_auto_local_delete_title">Auto delete from local folders</string>
    <string name="pref_auto_local_delete_sum">Include local folders in Auto delete functionality</string>
    <string name="pref_auto_local_delete_dialog_body">Note that for local folders this will remove episodes from AntennaPod and delete their media files from your device storage. They cannot be downloaded again through AntennaPod. Enable auto delete?</string>
    <string name="pref_smart_mark_as_played_sum">Mark episodes as played even if less than a certain amount of seconds of playing time is still left</string>
...
    <string name="pref_theme_title_automatic">Automatic</string>
    <string name="pref_theme_title_light">Light</string>
    <string name="pref_theme_title_dark">Dark</string>
    <string name="pref_episode_cache_unlimited">Unlimited</string>
    <string name="pref_playback_speed_sum">Customize the speeds available for variable speed playback</string>
    <string name="pref_feed_playback_speed_sum">The speed to use when starting audio playback for episodes in this podcast</string>
    <string name="pref_feed_skip">Auto skip</string>
    <string name="pref_feed_skip_sum">Skip introductions and ending credits</string>
    <string name="pref_feed_skip_ending">Skip last</string>
    <string name="pref_feed_skip_intro">Skip first</string>
    <string name="pref_feed_skip_ending_toast">Skipped last %d seconds</string>
    <string name="pref_feed_skip_intro_toast">Skipped first %d seconds</string>
    <string name="pref_playback_time_respects_speed_title">Adjust media info to playback speed</string>
...
    <string name="pref_expandNotify_sum">This usually expands the notification to show playback buttons.</string>
    <string name="pref_persistNotify_title">Persistent playback controls</string>
    <string name="pref_persistNotify_sum">Keep notification and lockscreen controls when playback is paused</string>
    <string name="pref_compact_notification_buttons_dialog_error_exact">You must select exactly two items</string>
    <string name="pref_full_notification_buttons_title">Set notification buttons</string>
    <string name="pref_full_notification_buttons_sum">Change the buttons on the playback notification</string>
    <string name="pref_enqueue_location_title">Enqueue location</string>
    <string name="pref_enqueue_location_sum">Add episodes to: %1$s</string>
    <string name="enqueue_location_back">Back</string>
    <string name="enqueue_location_front">Front</string>
    <string name="enqueue_location_after_current">After current episode</string>
    <string name="enqueue_location_random">Random</string>
    <string name="pref_smart_mark_as_played_disabled">Disabled</string>
    <string name="documentation_support">Documentation &amp; support</string>
    <string name="visit_user_forum">User forum</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
...
    <string name="shuffle_suggestions">Shuffle suggestions</string>
    <string name="add_preset">Add preset</string>
    <string name="download_started_talkback">Download started for %1$s</string>
    <string name="download_completed_talkback">Download completed for %1$s</string>

    <!-- Feed settings/information screen -->
    <string name="authentication_label">Authentication</string>
    <string name="authentication_descr">Change your username and password for this podcast and its episodes</string>
    <string name="feed_tags_label">Tags</string>
    <string name="feed_tags_summary">Change the tags of this podcast to help organize your subscriptions</string>
    <string name="feed_folders_include_root">Show above tags (side navigation only)</string>
    <string name="tag_all">All</string>
    <string name="tag_untagged">Untagged</string>
...
    <string name="episode_filters_label">Episode filter</string>
    <string name="episode_filters_description">List of terms used to decide if an episode should be included or excluded when auto downloading</string>
    <string name="add_term">Add term</string>
    <string name="exclude_terms">Exclude episodes containing any of the terms below</string>
    <string name="include_terms">Include only episodes containing any of the terms below</string>
    <string name="exclude_episodes_shorter_than">Exclude episodes shorter than</string>
    <string name="keep_updated">Keep updated</string>
    <string name="keep_updated_summary">Include this podcast when (auto-)refreshing all podcasts</string>
    <plurals name="statistics_episodes_started">
        <item quantity="one">started</item>
        <item quantity="other">started</item>
    </plurals>
    <plurals name="statistics_episodes_total">
...
    <string name="share_dialog_media_address">Media address</string>
    <string name="share_dialog_media_file_label">Media file</string>
    <string name="share_starting_position_label">Starting from</string>

    <!-- Audio controls -->
    <string name="audio_controls">Audio controls</string>
    <string name="playback_speed">Playback speed</string>
    <string name="player_switch_to_audio_only">Switch to audio only</string>

    <!-- proxy settings -->
    <string name="proxy_type_label">Type</string>
    <string name="host_label">Host</string>
    <string name="port_label">Port</string>
...
